empezada pagina de info de compra

--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -41,57 +41,56 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="data_formulary">
-            <form>
-                <h2>Introduce tus datos</h2>
-                <div class="data_formulary_inputs">
-                    <div>
-                        <input type="text" id="name" name="name" placeholder="Nombre" required />
 
-                        <input type="email" id="email" name="email" placeholder="Correo electrónico" required />
-                    </div>
-                    <div>
-                        <input type="text" id="surnames" name="surnames" placeholder="Apellidos" required />
-
-                        <input type="email" id="repeatemail" name="repeatemail" placeholder="Repetir Correo electrónico"
-                            required />
-                    </div>
-                    <div>
-                        <input type="text" id="mobile" name="mobile" placeholder="Número de teléfono móvil" required />
-                    </div>
-                </div>
-
+    <section class="data_formulary">
+        <form>
+            <h2>Introduce tus datos</h2>
+            <div class="data_formulary_inputs">
                 <div>
-                    <input type="checkbox" />
-                    <span>Acepto las condiciones generales de compra y confirmo que he leído el Aviso Legal y la
-                        Política de
-                        privacidad.</span>
+                    <input type="text" id="name" name="name" placeholder="Nombre" required />
+
+                    <input type="email" id="email" name="email" placeholder="Correo electrónico" required />
                 </div>
                 <div>
-                    <input type="checkbox" />
-                    <span>Deseo recibir ofertas y promociones de futuros espectáculos.</span>
+                    <input type="text" id="surnames" name="surnames" placeholder="Apellidos" required />
+
+                    <input type="email" id="repeatemail" name="repeatemail" placeholder="Repetir Correo electrónico"
+                        required />
                 </div>
-            </form>
-        </section>
+                <div>
+                    <input type="text" id="mobile" name="mobile" placeholder="Número de teléfono móvil" required />
+                </div>
+            </div>
+
+            <div>
+                <input type="checkbox" />
+                <span>Acepto las condiciones generales de compra y confirmo que he leído el Aviso Legal y la
+                    Política de
+                    privacidad.</span>
+            </div>
+            <div>
+                <input type="checkbox" />
+                <span>Deseo recibir ofertas y promociones de futuros espectáculos.</span>
+            </div>
+        </form>
+    </section>
 
 
-        <section class="data_payment">
-            <form>
-                <h2>Método de pago</h2>
-                <div class="container_payment">
-                    <div>
-                        <input type="radio" name="credit-bizum" id="creditcard" />
-                        <label for="creditcard">Tarjeta de crédito</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="credit-bizum" id="bizum" />
-                        <label for="bizum">Bizum</label>
-                    </div>
+    <section class="data_payment">
+        <form>
+            <h2>Método de pago</h2>
+            <div class="container_payment">
+                <div>
+                    <input type="radio" name="credit-bizum" id="creditcard" />
+                    <label for="creditcard">Tarjeta de crédito</label>
                 </div>
-            </form>
-        </section>
-    </main>
+                <div>
+                    <input type="radio" name="credit-bizum" id="bizum" />
+                    <label for="bizum">Bizum</label>
+                </div>
+            </div>
+        </form>
+    </section>
 
 
 
@@ -133,5 +132,9 @@
         </div>
     </footer>
 </body>
+
+<head>
+    <script src="../services/purchasePage.js"></script>
+</head>
 
 </html>
