ya se actualizan las compras

--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -16,8 +16,8 @@
             <ul class="header_ul">
                 <li class="header_li">
                     <div class="header_interestLinks">
-                        <a href="/">TODAS LAS FUNCIONES</a>
-                        <a href="/">OFERTAS</a>
+                        <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                        <a href="notFound.html">OFERTAS</a>
                     </div>
                 </li>
                 <li class="header_li">
@@ -92,14 +92,14 @@
         </form>
     </section>
 
-
-
     <section class="purchase_buttons">
         <div>
             <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
-            <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
+            <a class="purchase_buttons_purchase" href="#">PAGAR</a>
         </div>
     </section>
+
+
     <footer class="footer">
         <div class="footer_wrapper">
             <div class="footer_column">
