ya se muestra el correo del usuario que ha comprado

--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -43,7 +43,7 @@
     </header>
 
     <section class="data_formulary">
-        <form>
+        <form onsubmit="return false;">
             <h2>Introduce tus datos</h2>
             <div class="data_formulary_inputs">
                 <div>
@@ -75,9 +75,8 @@
         </form>
     </section>
 
-
     <section class="data_payment">
-        <form>
+        <form onsubmit="return false;">
             <h2>Método de pago</h2>
             <div class="container_payment">
                 <div>
@@ -95,10 +94,9 @@
     <section class="purchase_buttons">
         <div>
             <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
-            <a class="purchase_buttons_purchase" href="#">PAGAR</a>
+            <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
         </div>
     </section>
-
 
     <footer class="footer">
         <div class="footer_wrapper">
