Seleccion de categorias terminado

--- a/web/src/pages/mainPage.html
+++ b/web/src/pages/mainPage.html
@@ -48,66 +48,19 @@
         </div>
 
         <div class="mainPage_categorySelector">
-            <button>
+            <button onclick="getObrasCategoria('familiar')">
                 <p>FAMILIAR</p>
             </button>
-            <button>
+            <button onclick="getObrasCategoria('comedia')">
                 <p>COMEDIA</p>
             </button>
-            <button>
+            <button onclick="getObrasCategoria('musical')">
                 <p>MUSICAL</p>
             </button>
         </div>
 
         <div class="mainPage_functionsList">
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="" />
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-                        ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="" />
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-                        ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="" />
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-                        ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="" />
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-                        ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="" />
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-                        ha sido el texto</p>
-                </div>
-            </div>
-            <div class="function">
-                <img src="../assets/images/function_prueba.jpg" alt="" />
-                <div>
-                    <h2>Shakespeare en 97 minutos</h2>
-                    <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-                        ha sido el texto</p>
-                </div>
-            </div>
+
         </div>
     </main>
 
