Ya funciona todo

--- a/web/src/pages/aboutUs.html
+++ b/web/src/pages/aboutUs.html
@@ -1,162 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Teatro Galeguista</title>
-        <link rel="stylesheet" href="../styles/main/aboutUs.css" />
-        <link rel="stylesheet" href="../styles/generales.css" />
-        <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header class="header">
-            <nav class="header_nav">
-                <ul class="header_ul">
-                    <li class="header_li">
-                        <div class="header_interestLinks">
-                            <a href="/">TODAS LAS FUNCIONES</a>
-                            <a href="/">OFERTAS</a>
-                        </div>
-                    </li>
-                    <li class="header_li">
-                        <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
-                    </li>
-                    <li>
-                        <div class="header_information">
-                            <p>650 50 96 39</p>
-                            <div>
-                                <p>Corre. Baja de San Pablo, 15</p>
-                                <p>28004 Madrid</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="header_li">
-                        <div class="header_interestLinks">
-                            <a href="/">TODAS LAS FUNCIONES</a>
-                            <a href="/">OFERTAS</a>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main class="main_mobile">
-            <section class="aboutUs_section">
-                <h1>¿Quiénes somos?</h1>
-                <p>
-                    En el Teatro Galleguista, nuestra pasión por las artes escénicas se fusiona con el espíritu vibrante y acogedor de la cultura gallega.
-                    Situado en el bullicioso escenario de la capital española, nos enorgullece ofrecer una experiencia teatral única que celebra la rica
-                    tradición teatral de Galicia.
-                </p>
-                <p>
-                    Nuestra historia se remonta a décadas atrás, cuando un grupo apasionado de artistas gallegos decidió establecer un espacio donde la
-                    diversidad de las expresiones artísticas pudiera florecer. Desde entonces, el Teatro Galleguista se ha convertido en un faro cultural,
-                    iluminando la escena teatral de Madrid con producciones que cautivan, inspiran y desafían.
-                </p>
-                <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
-            </section>
-            <section class="aboutUs_section">
-                <p>
-                    En el corazón de nuestra filosofía está el compromiso con la autenticidad y la creatividad. Creemos en dar voz a las historias que de otra
-                    manera podrían pasar desapercibidas, explorando narrativas que reflejan la complejidad y diversidad de la experiencia humana. Nuestro elenco
-                    y equipo creativo, compuesto por artistas talentosos y apasionados, trabajan incansablemente para ofrecer actuaciones que resuenen con el
-                    público y dejen una impresión duradera.
-                </p>
-                <p>
-                    Además de nuestras producciones teatrales, el Teatro Galleguista es un espacio para la comunidad. Colaboramos con artistas locales,
-                    organizamos talleres educativos y eventos culturales, creando un ambiente donde la conexión y la expresión artística florecen. Nos
-                    enorgullece ser un punto de encuentro para amantes del teatro, tanto veteranos como nuevos espectadores, y estamos comprometidos con
-                    construir puentes entre culturas a través de la magia del escenario.
-                </p>
-                <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
-            </section>
-            <section class="aboutUs_section">
-                <p>
-                    Únete a nosotros en el Teatro Galleguista, donde la pasión se encuentra con la tradición y cada actuación es una experiencia inolvidable.
-                    ¡Esperamos verte entre el público mientras continuamos escribiendo juntos la historia del teatro en Madrid!
-                </p>
-            </section>
-        </main>
-        <main class="main_desktop">
-            <section class="aboutUs_section">
-                <h1>¿Quiénes somos?</h1>
-                <div>
-                    <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
-                    <div>
-                        <p>
-                            En el Teatro Galleguista, nuestra pasión por las artes escénicas se fusiona con el espíritu vibrante y acogedor de la cultura
-                            gallega. Situado en el bullicioso escenario de la capital española, nos enorgullece ofrecer una experiencia teatral única que
-                            celebra la rica tradición teatral de Galicia.
-                        </p>
-                        <p>
-                            Nuestra historia se remonta a décadas atrás, cuando un grupo apasionado de artistas gallegos decidió establecer un espacio donde la
-                            diversidad de las expresiones artísticas pudiera florecer. Desde entonces, el Teatro Galleguista se ha convertido en un faro
-                            cultural, iluminando la escena teatral de Madrid con producciones que cautivan, inspiran y desafían.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section class="aboutUs_section">
-                <div>
-                    <div>
-                        <p>
-                            En el corazón de nuestra filosofía está el compromiso con la autenticidad y la creatividad. Creemos en dar voz a las historias que
-                            de otra manera podrían pasar desapercibidas, explorando narrativas que reflejan la complejidad y diversidad de la experiencia
-                            humana. Nuestro elenco y equipo creativo, compuesto por artistas talentosos y apasionados, trabajan incansablemente para ofrecer
-                            actuaciones que resuenen con el público y dejen una impresión duradera.
-                        </p>
-                        <p>
-                            Además de nuestras producciones teatrales, el Teatro Galleguista es un espacio para la comunidad. Colaboramos con artistas locales,
-                            organizamos talleres educativos y eventos culturales, creando un ambiente donde la conexión y la expresión artística florecen. Nos
-                            enorgullece ser un punto de encuentro para amantes del teatro, tanto veteranos como nuevos espectadores, y estamos comprometidos con
-                            construir puentes entre culturas a través de la magia del escenario.
-                        </p>
-                    </div>
-                    <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
-                </div>
-            </section>
-            <section class="aboutUs_section">
-                <div>
-                    <img src="../assets/images/aboutUs/aboutUs3.jpg" alt="Teatro" />
-                    <div>
-                        <p>
-                            Únete a nosotros en el Teatro Galleguista, donde la pasión se encuentra con la tradición y cada actuación es una experiencia
-                            inolvidable. ¡Esperamos verte entre el público mientras continuamos escribiendo juntos la historia del teatro en Madrid!
-                        </p>
-                    </div>
-                </div>
-            </section>
-        </main>
 
-        <footer class="footer">
-            <div class="footer_wrapper">
-                <div class="footer_column">
-                    <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
-                    <p>650 50 50 96</p>
-                    <p>Corre. Baja de San Pablo, 15</p>
-                    <p>28004 Madrid</p>
-                </div>
-                <div class="footer_column">
-                    <h2>QUIENES SOMOS</h2>
-                    <a href="#">Quienes somos</a>
-                </div>
-                <div class="footer_column">
-                    <h2>PROMOCIONES</h2>
-                    <a href="#">Todas las promociones</a>
-                </div>
-                <div class="footer_column">
-                    <h2>NUESTRAS REDES</h2>
-                    <div class="footer_socials">
-                        <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Teatro Galeguista</title>
+    <link rel="stylesheet" href="../styles/main/aboutUs.css" />
+    <link rel="stylesheet" href="../styles/generales.css" />
+    <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header class="header">
+        <nav class="header_nav">
+            <ul class="header_ul">
+                <li class="header_li">
+                    <div class="header_interestLinks">
+                        <a href="/">TODAS LAS FUNCIONES</a>
+                        <a href="/">OFERTAS</a>
                     </div>
-                </div>
-                <div class="footer_column">
-                    <p>650 50 50 96</p>
-                    <p>Corre. Baja de San Pablo, 15</p>
-                    <p>28004 Madrid</p>
+                </li>
+                <li class="header_li">
+                    <a href="mainPage.html"><img src="../assets/images/logos/teatro_galeguista_light.png"
+                            alt="Logo" /></a>
+                </li>
+                <li>
+                    <div class="header_information">
+                        <p>650 50 96 39</p>
+                        <div>
+                            <p>Corre. Baja de San Pablo, 15</p>
+                            <p>28004 Madrid</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="header_li">
+                    <div class="header_interestLinks">
+                        <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                        <a href="notFound.html">OFERTAS</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main_mobile">
+        <section class="aboutUs_section">
+            <h1>¿Quiénes somos?</h1>
+            <p>
+                En el Teatro Galleguista, nuestra pasión por las artes escénicas se fusiona con el espíritu vibrante y
+                acogedor de la cultura gallega.
+                Situado en el bullicioso escenario de la capital española, nos enorgullece ofrecer una experiencia
+                teatral única que celebra la rica
+                tradición teatral de Galicia.
+            </p>
+            <p>
+                Nuestra historia se remonta a décadas atrás, cuando un grupo apasionado de artistas gallegos decidió
+                establecer un espacio donde la
+                diversidad de las expresiones artísticas pudiera florecer. Desde entonces, el Teatro Galleguista se ha
+                convertido en un faro cultural,
+                iluminando la escena teatral de Madrid con producciones que cautivan, inspiran y desafían.
+            </p>
+            <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
+        </section>
+        <section class="aboutUs_section">
+            <p>
+                En el corazón de nuestra filosofía está el compromiso con la autenticidad y la creatividad. Creemos en
+                dar voz a las historias que de otra
+                manera podrían pasar desapercibidas, explorando narrativas que reflejan la complejidad y diversidad de
+                la experiencia humana. Nuestro elenco
+                y equipo creativo, compuesto por artistas talentosos y apasionados, trabajan incansablemente para
+                ofrecer actuaciones que resuenen con el
+                público y dejen una impresión duradera.
+            </p>
+            <p>
+                Además de nuestras producciones teatrales, el Teatro Galleguista es un espacio para la comunidad.
+                Colaboramos con artistas locales,
+                organizamos talleres educativos y eventos culturales, creando un ambiente donde la conexión y la
+                expresión artística florecen. Nos
+                enorgullece ser un punto de encuentro para amantes del teatro, tanto veteranos como nuevos espectadores,
+                y estamos comprometidos con
+                construir puentes entre culturas a través de la magia del escenario.
+            </p>
+            <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
+        </section>
+        <section class="aboutUs_section">
+            <p>
+                Únete a nosotros en el Teatro Galleguista, donde la pasión se encuentra con la tradición y cada
+                actuación es una experiencia inolvidable.
+                ¡Esperamos verte entre el público mientras continuamos escribiendo juntos la historia del teatro en
+                Madrid!
+            </p>
+        </section>
+    </main>
+    <main class="main_desktop">
+        <section class="aboutUs_section">
+            <h1>¿Quiénes somos?</h1>
+            <div>
+                <img src="../assets/images/aboutUs/aboutUs1.jpg" alt="Teatro" />
+                <div>
+                    <p>
+                        En el Teatro Galleguista, nuestra pasión por las artes escénicas se fusiona con el espíritu
+                        vibrante y acogedor de la cultura
+                        gallega. Situado en el bullicioso escenario de la capital española, nos enorgullece ofrecer una
+                        experiencia teatral única que
+                        celebra la rica tradición teatral de Galicia.
+                    </p>
+                    <p>
+                        Nuestra historia se remonta a décadas atrás, cuando un grupo apasionado de artistas gallegos
+                        decidió establecer un espacio donde la
+                        diversidad de las expresiones artísticas pudiera florecer. Desde entonces, el Teatro Galleguista
+                        se ha convertido en un faro
+                        cultural, iluminando la escena teatral de Madrid con producciones que cautivan, inspiran y
+                        desafían.
+                    </p>
                 </div>
             </div>
-        </footer>
-    </body>
+        </section>
+        <section class="aboutUs_section">
+            <div>
+                <div>
+                    <p>
+                        En el corazón de nuestra filosofía está el compromiso con la autenticidad y la creatividad.
+                        Creemos en dar voz a las historias que
+                        de otra manera podrían pasar desapercibidas, explorando narrativas que reflejan la complejidad y
+                        diversidad de la experiencia
+                        humana. Nuestro elenco y equipo creativo, compuesto por artistas talentosos y apasionados,
+                        trabajan incansablemente para ofrecer
+                        actuaciones que resuenen con el público y dejen una impresión duradera.
+                    </p>
+                    <p>
+                        Además de nuestras producciones teatrales, el Teatro Galleguista es un espacio para la
+                        comunidad. Colaboramos con artistas locales,
+                        organizamos talleres educativos y eventos culturales, creando un ambiente donde la conexión y la
+                        expresión artística florecen. Nos
+                        enorgullece ser un punto de encuentro para amantes del teatro, tanto veteranos como nuevos
+                        espectadores, y estamos comprometidos con
+                        construir puentes entre culturas a través de la magia del escenario.
+                    </p>
+                </div>
+                <img src="../assets/images/aboutUs/aboutUs2.jpg" alt="Teatro" />
+            </div>
+        </section>
+        <section class="aboutUs_section">
+            <div>
+                <img src="../assets/images/aboutUs/aboutUs3.jpg" alt="Teatro" />
+                <div>
+                    <p>
+                        Únete a nosotros en el Teatro Galleguista, donde la pasión se encuentra con la tradición y cada
+                        actuación es una experiencia
+                        inolvidable. ¡Esperamos verte entre el público mientras continuamos escribiendo juntos la
+                        historia del teatro en Madrid!
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer_wrapper">
+            <div class="footer_column">
+                <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
+                <p>650 50 50 96</p>
+                <p>Corre. Baja de San Pablo, 15</p>
+                <p>28004 Madrid</p>
+            </div>
+            <div class="footer_column">
+                <h2>QUIENES SOMOS</h2>
+                <a href="#">Quienes somos</a>
+            </div>
+            <div class="footer_column">
+                <h2>PROMOCIONES</h2>
+                <a href="notFound.html">Todas las promociones</a>
+            </div>
+            <div class="footer_column">
+                <h2>NUESTRAS REDES</h2>
+                <div class="footer_socials">
+                    <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                </div>
+            </div>
+            <div class="footer_column">
+                <p>650 50 50 96</p>
+                <p>Corre. Baja de San Pablo, 15</p>
+                <p>28004 Madrid</p>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
