--- a/web/src/pages/mainPage.html
+++ b/web/src/pages/mainPage.html
@@ -21,7 +21,8 @@
                     </div>
                 </li>
                 <li class="header_li">
-                    <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                    <a href="mainPage.html"><img src="../assets/images/logos/teatro_galeguista_light.png"
+                            alt="Logo" /></a>
                 </li>
                 <li>
                     <div class="header_information">
@@ -34,8 +35,8 @@
                 </li>
                 <li class="header_li">
                     <div class="header_interestLinks">
-                        <a href="/">TODAS LAS FUNCIONES</a>
-                        <a href="/">OFERTAS</a>
+                        <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                        <a href="notFound.html">OFERTAS</a>
                     </div>
                 </li>
             </ul>
@@ -74,11 +75,11 @@
             </div>
             <div class="footer_column">
                 <h2>QUIENES SOMOS</h2>
-                <a href="#">Quienes somos</a>
+                <a href="aboutUs.html">Quienes somos</a>
             </div>
             <div class="footer_column">
                 <h2>PROMOCIONES</h2>
-                <a href="#">Todas las promociones</a>
+                <a href="notFound.html">Todas las promociones</a>
             </div>
             <div class="footer_column">
                 <h2>NUESTRAS REDES</h2>
