--- a/web/src/pages/header.html
+++ b/web/src/pages/header.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Teatro Galeguista</title>
+        <link rel="stylesheet" href="../styles/generales.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teatro Galeguista</title>
-    <link rel="stylesheet" href="../styles/generales.css" />
-</head>
-
-<body>
-    <header class="header">
-        <nav class="header_nav">
-            <ul class="header_ul">
-                <li class="header_li">
-                    <div class="header_interestLinks">
-                        <a href="mainPage.html">TODAS LAS FUNCIONES</a>
-                        <a href="notFound.html">OFERTAS</a>
-                    </div>
-                </li>
-                <li class="header_li">
-                    <a href="mainPage.html"><img src="../assets/images/logos/teatro_galeguista_light.png"
-                            alt="Logo" /></a>
-                </li>
-                <li>
-                    <div class="header_information">
-                        <p>650 50 96 39</p>
-                        <div>
-                            <p>Corre. Baja de San Pablo, 15</p>
-                            <p>28004 Madrid</p>
+    <body>
+        <header class="header">
+            <nav class="header_nav">
+                <ul class="header_ul">
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                            <a href="notFound.html">OFERTAS</a>
                         </div>
-                    </div>
-                </li>
-                <li class="header_li">
-                    <div class="header_interestLinks">
-                        <a href="mainPage.html">TODAS LAS FUNCIONES</a>
-                        <a href="notFound.html">OFERTAS</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
-</body>
-
+                    </li>
+                    <li class="header_li">
+                        <a href="mainPage.html"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                    </li>
+                    <li>
+                        <div class="header_information">
+                            <p>650 50 96 39</p>
+                            <div>
+                                <p>Corre. Baja de San Pablo, 15</p>
+                                <p>28004 Madrid</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                            <a href="notFound.html">OFERTAS</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
