--- a/web/src/pages/notFound.html
+++ b/web/src/pages/notFound.html
@@ -14,8 +14,8 @@
                 <ul class="header_ul">
                     <li class="header_li">
                         <div class="header_interestLinks">
-                            <a href="/">TODAS LAS FUNCIONES</a>
-                            <a href="/">OFERTAS</a>
+                            <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                            <a href="notFound.html">OFERTAS</a>
                         </div>
                     </li>
                     <li class="header_li">
@@ -60,11 +60,11 @@
                 </div>
                 <div class="footer_column">
                     <h2>QUIENES SOMOS</h2>
-                    <a href="#">Quienes somos</a>
+                    <a href="aboutUs.html">Quienes somos</a>
                 </div>
                 <div class="footer_column">
                     <h2>PROMOCIONES</h2>
-                    <a href="#">Todas las promociones</a>
+                    <a href="notFound.html">Todas las promociones</a>
                 </div>
                 <div class="footer_column">
                     <h2>NUESTRAS REDES</h2>
