--- a/web/src/pages/purchasePage.html
+++ b/web/src/pages/purchasePage.html
@@ -1,138 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Teatro Galeguista</title>
+        <link rel="stylesheet" href="../styles/main/purchasePage.css" />
+        <link rel="stylesheet" href="../styles/generales.css" />
+        <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teatro Galeguista</title>
-    <link rel="stylesheet" href="../styles/main/purchasePage.css" />
-    <link rel="stylesheet" href="../styles/generales.css" />
-    <script src="https://kit.fontawesome.com/9e87e4d4e8.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <header class="header">
-        <nav class="header_nav">
-            <ul class="header_ul">
-                <li class="header_li">
-                    <div class="header_interestLinks">
-                        <a href="mainPage.html">TODAS LAS FUNCIONES</a>
-                        <a href="notFound.html">OFERTAS</a>
-                    </div>
-                </li>
-                <li class="header_li">
-                    <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
-                </li>
-                <li>
-                    <div class="header_information">
-                        <p>650 50 96 39</p>
-                        <div>
-                            <p>Corre. Baja de San Pablo, 15</p>
-                            <p>28004 Madrid</p>
+    <body>
+        <header class="header">
+            <nav class="header_nav">
+                <ul class="header_ul">
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="mainPage.html">TODAS LAS FUNCIONES</a>
+                            <a href="notFound.html">OFERTAS</a>
                         </div>
+                    </li>
+                    <li class="header_li">
+                        <a href="#"><img src="../assets/images/logos/teatro_galeguista_light.png" alt="Logo" /></a>
+                    </li>
+                    <li>
+                        <div class="header_information">
+                            <p>650 50 96 39</p>
+                            <div>
+                                <p>Corre. Baja de San Pablo, 15</p>
+                                <p>28004 Madrid</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header_li">
+                        <div class="header_interestLinks">
+                            <a href="/">TODAS LAS FUNCIONES</a>
+                            <a href="/">OFERTAS</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <section class="data_formulary">
+            <form onsubmit="return false;">
+                <h2>Introduce tus datos</h2>
+                <div class="data_formulary_inputs">
+                    <div>
+                        <input type="text" id="name" name="name" placeholder="Nombre" required />
+
+                        <input type="email" id="email" name="email" placeholder="Correo electrónico" required />
                     </div>
-                </li>
-                <li class="header_li">
-                    <div class="header_interestLinks">
-                        <a href="/">TODAS LAS FUNCIONES</a>
-                        <a href="/">OFERTAS</a>
+                    <div>
+                        <input type="text" id="surnames" name="surnames" placeholder="Apellidos" required />
+
+                        <input type="email" id="repeatemail" name="repeatemail" placeholder="Repetir Correo electrónico" required />
                     </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
+                    <div>
+                        <input type="text" id="mobile" name="mobile" placeholder="Número de teléfono móvil" required />
+                    </div>
+                </div>
 
-    <section class="data_formulary">
-        <form onsubmit="return false;">
-            <h2>Introduce tus datos</h2>
-            <div class="data_formulary_inputs">
                 <div>
-                    <input type="text" id="name" name="name" placeholder="Nombre" required />
-
-                    <input type="email" id="email" name="email" placeholder="Correo electrónico" required />
+                    <input type="checkbox" />
+                    <span>Acepto las condiciones generales de compra y confirmo que he leído el Aviso Legal y la Política de privacidad.</span>
                 </div>
                 <div>
-                    <input type="text" id="surnames" name="surnames" placeholder="Apellidos" required />
-
-                    <input type="email" id="repeatemail" name="repeatemail" placeholder="Repetir Correo electrónico"
-                        required />
+                    <input type="checkbox" />
+                    <span>Deseo recibir ofertas y promociones de futuros espectáculos.</span>
                 </div>
-                <div>
-                    <input type="text" id="mobile" name="mobile" placeholder="Número de teléfono móvil" required />
-                </div>
-            </div>
+            </form>
+        </section>
 
+        <section class="data_payment">
+            <form onsubmit="return false;">
+                <h2>Método de pago</h2>
+                <div class="container_payment">
+                    <div>
+                        <input type="radio" name="credit-bizum" id="creditcard" />
+                        <label for="creditcard">Tarjeta de crédito</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="credit-bizum" id="bizum" />
+                        <label for="bizum">Bizum</label>
+                    </div>
+                </div>
+            </form>
+        </section>
+
+        <section class="purchase_buttons">
             <div>
-                <input type="checkbox" />
-                <span>Acepto las condiciones generales de compra y confirmo que he leído el Aviso Legal y la
-                    Política de
-                    privacidad.</span>
+                <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
+                <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
             </div>
-            <div>
-                <input type="checkbox" />
-                <span>Deseo recibir ofertas y promociones de futuros espectáculos.</span>
-            </div>
-        </form>
-    </section>
+        </section>
 
-    <section class="data_payment">
-        <form onsubmit="return false;">
-            <h2>Método de pago</h2>
-            <div class="container_payment">
-                <div>
-                    <input type="radio" name="credit-bizum" id="creditcard" />
-                    <label for="creditcard">Tarjeta de crédito</label>
+        <footer class="footer">
+            <div class="footer_wrapper">
+                <div class="footer_column">
+                    <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
+                    <p>650 50 50 96</p>
+                    <p>Corre. Baja de San Pablo, 15</p>
+                    <p>28004 Madrid</p>
                 </div>
-                <div>
-                    <input type="radio" name="credit-bizum" id="bizum" />
-                    <label for="bizum">Bizum</label>
+                <div class="footer_column">
+                    <h2>QUIENES SOMOS</h2>
+                    <a href="aboutUs.html">Quienes somos</a>
                 </div>
-            </div>
-        </form>
-    </section>
-
-    <section class="purchase_buttons">
-        <div>
-            <a class="purchase_buttons_back" href="mainPage.html">Volver</a>
-            <a class="purchase_buttons_purchase" href="purchaseCompleted.html">PAGAR</a>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="footer_wrapper">
-            <div class="footer_column">
-                <img src="../assets/images/logo_full_dark.png" alt="" class="footer_logo" />
-                <p>650 50 50 96</p>
-                <p>Corre. Baja de San Pablo, 15</p>
-                <p>28004 Madrid</p>
-            </div>
-            <div class="footer_column">
-                <h2>QUIENES SOMOS</h2>
-                <a href="#">Quienes somos</a>
-            </div>
-            <div class="footer_column">
-                <h2>PROMOCIONES</h2>
-                <a href="#">Todas las promociones</a>
-            </div>
-            <div class="footer_column">
-                <h2>NUESTRAS REDES</h2>
-                <div class="footer_socials">
-                    <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <div class="footer_column">
+                    <h2>PROMOCIONES</h2>
+                    <a href="notFound.html">Todas las promociones</a>
+                </div>
+                <div class="footer_column">
+                    <h2>NUESTRAS REDES</h2>
+                    <div class="footer_socials">
+                        <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    </div>
+                </div>
+                <div class="footer_column">
+                    <p>650 50 50 96</p>
+                    <p>Corre. Baja de San Pablo, 15</p>
+                    <p>28004 Madrid</p>
                 </div>
             </div>
-            <div class="footer_column">
-                <p>650 50 50 96</p>
-                <p>Corre. Baja de San Pablo, 15</p>
-                <p>28004 Madrid</p>
-            </div>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 
-<head>
-    <script src="../services/purchasePage.js"></script>
-</head>
-
+    <head>
+        <script src="../services/purchasePage.js"></script>
+    </head>
 </html>
